--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -35,7 +35,7 @@
             <li><a href="/"class="nav__link">Sobre</a></li>
             <li><a href="/"class="nav__link">Contato</a></li>
             {% if request.user.is_authenticated%}
-            <li><a href="#"class="nav__link">Perfil</a></li>
+            <li><a href="/profile/"class="nav__link">Perfil</a></li>
             {% else %}
                 <li><a href="/login/"class="nav__link">Login</a></li>
             {% endif %}
