--- a/Home/templates/Home/profile.html
+++ b/Home/templates/Home/profile.html
@@ -1,3 +1,53 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Perfil{% endblock title %}
-{% block body %}{% endblock body %}
+{% block body %}
+<section id="profile">
+    <div class="profile__contaier">
+        <div class="image__box__profile">
+            <div class="image__container">
+                <img src="https://avatars.githubusercontent.com/u/47481079?v=4" alt="">
+                <div class="edit_image"><i class="fas fa-edit" aria-hidden="true"></i></div>
+            </div>
+            <div class="details">
+                <h4>NATAN</h4>
+                <h4>Admin</h4>
+                <h4>criarviewpraisso@gmail.com</h4>
+                <form action="#" method="POST">
+                    {% csrf_token %}
+                    <button type="submit">Desconectar</button>
+                </form>
+            </div>
+            <div class="address">
+                <div>
+                    <h4>(Endereco)</h4>
+                    <p>JuizdeFora <i class="fas fa-edit address_edit" aria-hidden="true"></i></p>
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="upload_image_form">
+    <form action="#" method="POST" class="image_form">
+        {% csrf_token %}
+        <div class="cross"> <i class="fas fa-times closeImageForm" aria-hidden="true"></i></div>
+        <div class="image_btns">
+            <h3>Editar foto de Perfil</h3>
+            <button type="submit">Enviar</button>
+        </div>
+    </form>
+</div>
+<div class="address_upload">
+    <form action="#" method="POST"></form>
+        {% csrf_token %}
+        <div class="cross2"><i class="fas fa-times closeAddressForm" aria-hidden="true"></i></div>
+        <h1>Editar Endereco</h1>
+        <textarea name="address_area" id="address_area" cols="40" rows="3"></textarea>
+        <div class="btn__address">
+            <button type="submit">Enviar</button>
+        </div>
+    </form>
+</div>
+
+</section>
+
+{% endblock body %}
