--- a/Home/templates/base.html
+++ b/Home/templates/base.html
@@ -33,7 +33,7 @@
             <li><a href="/" class="nav__link">Inicio</a></li>
             <li><a href="/menu/"class="nav__link">Cardapio</a></li>
             <li><a href="/"class="nav__link">Sobre</a></li>
-            <li><a href="/"class="nav__link">Contato</a></li>
+            <li><a href="/contact/"class="nav__link">Contato</a></li>
             {% if request.user.is_authenticated%}
             <li><a href="/profile/"class="nav__link">Perfil</a></li>
             {% else %}
