--- a/Home/templates/Home/index.html
+++ b/Home/templates/Home/index.html
@@ -5,8 +5,8 @@
     <h4>bem vindo</h4>
     <h1>Melhor Pizza do Planeta</h1>
     <div class="btns">
-        <a href="#" >Seus Pedidos</a>
-        <a href="#" >Ver Menu</a>
+        <a href="/orders/" >Seus Pedidos</a>
+        <a href="/menu/" >Ver Menu</a>
     </div>
 
 </section>
